# nevy_prediction

./: Cargo.toml
.cargo/: config.toml
crates/example/: Cargo.toml
crates/example/src/: lib.rs  networking.rs  scheme.rs  simulation.rs
crates/example/src/simulation/: mod.rs  player.rs
crates/nevy_prediction/: Cargo.toml
crates/nevy_prediction/src/: lib.rs
crates/nevy_prediction/src/client/: mod.rs  parallel_app.rs  prediction.rs  prediction_app.rs  server_world.rs  server_world_app.rs  simulation_world.rs  template_world.rs
crates/nevy_prediction/src/common/: mod.rs  scheme.rs
crates/nevy_prediction/src/common/simulation/: extract_component.rs  extract_relation.rs  extract_resource.rs  mod.rs  schedules.rs  simulation_entity.rs  update_component.rs
crates/nevy_prediction/src/server/: mod.rs
