[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17" }
nevy.workspace = true
serde = { version = "1.0", features = ["derive"] }
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
rcgen = "0.13.1"

nevy_prediction.path = "../nevy_prediction"
